[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imagegit-tool"
version = "0.1.0"
description = "Image + pixel-diff git wrapper"
requires-python = ">=3.9"
dependencies = [
  "pillow>=10",
  "numpy>=1.24"
]

[project.scripts]
imagegit = "imagegit:main"
pixelgit = "pixelgit:main"

[tool.setuptools]
py-modules = ["imagegit", "pixelgit"]